--- a/app/assets/images/favicon/site.webmanifest.erb
+++ b/app/assets/images/favicon/site.webmanifest.erb
@@ -1,6 +1,6 @@
 {
   "name": "Omniscient Design",
-  "short_name": "OD",
+  "short_name": "Omniscient Design",
   "icons": [
     {
       "src": "<%= asset_path 'favicon/web-app-manifest-192x192.png' %>",
