--- a/app/views/designers/_designer_card.html.erb
+++ b/app/views/designers/_designer_card.html.erb
@@ -13,7 +13,7 @@
             <%= country.country %>
           </p>
         <% end %>
-        <p class="title-card-designer"><%= designer.nom_designer %></p>
+        <p class="title-card-designer"><%= designer.nom %> <br> <%= designer.prenom %> </p>
       </div>
     </div>
   <% end %>
