--- a/app/assets/stylesheets/pages/_homepage.scss
+++ b/app/assets/stylesheets/pages/_homepage.scss
@@ -3,12 +3,15 @@
 #oeuvres {
   transition: transform 0.5s ease-in-out;
 }
+
 .swipe-left-animation {
   transform: translateX(-100%);
 }
+
 .swipe-right-animation {
   transform: translateX(100%);
 }
+
 .home-flex {
   display: flex;
   flex-direction: column;
@@ -19,20 +22,25 @@
 .nav-home-mobile {
   display: none;
 }
+
 .nav-home {
   position: fixed;
   z-index: 99;
   margin-top: 132px;
+
   .active {
     font-weight: 500;
+    text-decoration: underline;
   }
 }
 
 .nav-home a {
   font-size: 20px;
+
   &:hover {
     cursor: pointer;
     font-weight: 500;
+    text-decoration: underline;
   }
 }
 
@@ -44,12 +52,14 @@
   bottom: 45px;
   gap: 24px;
 }
-.info-beta{
+
+.info-beta {
   position: fixed;
   right: 10vw;
   margin-top: 132px;
   cursor: pointer;
 }
+
 @media screen and (min-width:769px) and (max-width: 1024px) {
 
   .nav-home a {
@@ -60,8 +70,9 @@
     gap: 16px;
   }
 }
-@media screen and (min-width:601px) and (max-width:768px){
-  .nav-home-mobile{
+
+@media screen and (min-width:601px) and (max-width:768px) {
+  .nav-home-mobile {
     background-color: #F7F7F7;
     display: flex;
     width: 100vw;
@@ -72,10 +83,12 @@
     z-index: 9999;
     height: 90px;
   }
-  .logo-img{
+
+  .logo-img {
     width: 40px;
     height: 40px;
   }
+
   .nav-home-mobile a {
     font-size: 18px;
     color: $primary-color;
@@ -89,23 +102,27 @@
   .nav-home-mobile .active {
     font-weight: 500;
   }
-  .nav-home-mobile svg{
+
+  .nav-home-mobile svg {
     scale: 2;
   }
 
   .nav-home {
     display: none;
   }
-  .home-page.top-bar-search{
+
+  .home-page.top-bar-search {
     display: none;
   }
+
   .button-nav {
     display: none;
   }
 
 }
-@media screen and (min-width:426px) and (max-width:600px){
-  .nav-home-mobile{
+
+@media screen and (min-width:426px) and (max-width:600px) {
+  .nav-home-mobile {
     background-color: #F7F7F7;
     display: flex;
     width: 100vw;
@@ -116,10 +133,12 @@
     z-index: 9999;
     height: 80px;
   }
-  .logo-img{
+
+  .logo-img {
     width: 35px;
     height: 35px;
   }
+
   .nav-home-mobile a {
     color: $primary-color;
     font-size: 17px;
@@ -133,23 +152,27 @@
   .nav-home-mobile .active {
     font-weight: 500;
   }
-  .nav-home-mobile svg{
+
+  .nav-home-mobile svg {
     scale: 1.6;
   }
 
   .nav-home {
     display: none;
   }
-  .home-page.top-bar-search{
+
+  .home-page.top-bar-search {
     display: none;
   }
+
   .button-nav {
     display: none;
   }
 
 }
-@media screen and (min-width:0px) and (max-width:425px){
-  .nav-home-mobile{
+
+@media screen and (min-width:0px) and (max-width:425px) {
+  .nav-home-mobile {
     background-color: #F7F7F7;
     display: flex;
     width: 100vw;
@@ -160,10 +183,12 @@
     z-index: 9999;
     height: 70px;
   }
-  .logo-img{
+
+  .logo-img {
     width: 35px;
     height: 35px;
   }
+
   .nav-home-mobile a {
     color: $primary-color;
   }
@@ -176,16 +201,19 @@
   .nav-home-mobile .active {
     font-weight: 500;
   }
-  .nav-home-mobile svg{
+
+  .nav-home-mobile svg {
     scale: 1.4;
   }
 
   .nav-home {
     display: none;
   }
-  .home-page.top-bar-search{
+
+  .home-page.top-bar-search {
     display: none;
   }
+
   .button-nav {
     display: none;
   }
@@ -202,9 +230,10 @@
 //   }
 // }
 
-  .nav-home a {
-    color: $primary-color;
-  }
-  body.dark .nav-home a {
-    color: $secondary-color;
-  }
+.nav-home a {
+  color: $primary-color;
+}
+
+body.dark .nav-home a {
+  color: $secondary-color;
+}
