--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -4,7 +4,7 @@
  <div class="error-message" style="color: red; display: none;"></div>
   <% if @designer.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(@designer.errors.count, "erreur") %> interdit à cet designer d'être enregistré :</h2>
+      <h2><%= pluralize(@designer.errors.count, "erreur") %> empêchent ce(tte) designer d'être enregistré(e) :</h2>
       <ul>
         <% @designer.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
@@ -16,7 +16,12 @@
     <h3>Étape 1 : Nom</h3>
     <div class="flex-form">
       <div>
-        <%= form.text_field :nom_designer, placeholder: "Nom du designer" %>
+        <%= form.label :nom, "Nom" %>
+        <%= form.text_field :nom, placeholder: "Nom de famille" %>
+      </div>
+      <div>
+        <%= form.label :prenom, "Prénom" %>
+        <%= form.text_field :prenom, placeholder: "Prénom" %>
       </div>
     </div>
     <div class="flex-btn-add" style="justify-content: flex-end;">
