--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -9,6 +9,78 @@
   <h1>Rapport de mise à jour</h1>
 </section>
 <section class="grid-1">
+  <h2>Mise à jour du 24 février 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Correction du processus de suppression des <span class="black medium">références</span> et des <span class="black medium">designers</span>.<br>
+    • Amélioration du suivi des ajouts et suppressions de <span class="black medium">références</span> et de <span class="black medium">designers</span>.</p>
+
+  <h2>Mise à jour du 22 février 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Séparation du nom et du prénom pour les <span class="black medium">designers</span> dans le formulaire de saisie.<br>
+    • Correction du nommage des <span class="black medium">images</span> pour une meilleure gestion.<br>
+    • Tri des <span class="black medium">designers</span> désormais effectué par leur nom de famille.</p>
+
+  <h2>Mise à jour du 8 février 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Ajout de la <span class="black medium">favicon</span> et des configurations associées (Apple/Manifest...).<br>
+    • Amélioration du <span class="black medium">SEO</span> avec la mise à jour des balises meta.<br>
+    • Finalisation de l'ajout et de la possibilité de lier des <span class="black medium">notions</span> aux références.</p>
+
+  <h2>Mise à jour du 2 février 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Simplification du processus d'ajout de <span class="black medium">designers</span> et de <span class="black medium">références</span>.<br>
+    • Création d'une page de confirmation lors de la création d'un <span class="black medium">compte utilisateur</span>.</p>
+
+  <h2>Mise à jour du 1 février 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Intégration de <span class="black medium">Google Analytics</span> pour le suivi des données.<br>
+    • Ajout de la gestion des <span class="black medium">cookies</span> sur le site.</p>
+
+  <h2>Mise à jour du 20 janvier 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Ajout d'une <span class="black medium">popup</span> informative sur la page d'accueil.<br>
+    • Introduction d'une popup pour informer les utilisateurs sur le <span class="black medium">parrainage</span>.<br>
+    • Début de l'intégration des <span class="black medium">notions</span> sur le site.</p>
+
+  <h2>Mise à jour du 17 janvier 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Correction d'un bug lié à la bibliothèque <span class="black medium">GSAP</span> (animations).<br>
+    • Correction des liens associés aux <span class="black medium">pays</span>.<br>
+    • Amélioration des pages "<span class="black medium">Recherche</span>" et "<span class="black medium">Frise chronologique</span>".</p>
+
+  <h2>Mise à jour du 16 janvier 2025</h2>
+  <h3>Corrections</h3>
+  <p>• Ajustement du responsive design pour les <span class="black medium">contributions</span>.<br>
+    • Correction du comportement responsive du <span class="black medium">loader</span>.</p>
+
+  <h2>Mise à jour du 10 janvier 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Uniformisation des <span class="black medium">icônes</span> à travers le site.</p>
+
+  <h2>Mise à jour du 9 janvier 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Amélioration des effets de survol (<span class="black medium">hover</span>) des boutons.<br>
+    • Renommage des "œuvres" en "références".</p>
+  <h3>Corrections</h3>
+  <p>• Correction d'un problème empêchant aux administrateurs de supprimer un compte utilisateur.</p>
+
+  <h2>Mise à jour du 8 janvier 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Ajout de la liaison entre les cases à cocher (<span class="black medium">checkbox</span>) et leurs labels associés.</p>
+  <h3>Corrections</h3>
+  <p>• Correction d'un bug JavaScript affectant l'autocomplétion.<br>
+    • Correction du CSS pour améliorer l'affichage des cartes sur la page d'accueil.<br>
+    • Résolution des problèmes de défilement des cartes.</p>
+
+  <h2>Mise à jour du 7 janvier 2025</h2>
+  <h3>Nouveautés</h3>
+  <p>• Mise à jour de l'adresse e-mail de contact : <span class="black medium">contact@omniscientdesign.fr</span>.<br>
+    • Ajout du CSS pour améliorer l'apparence des éléments de <span class="black medium">select</span>.<br>
+    • Accès à la page de recherche désormais disponible sans nécessité de connexion à un compte.</p>
+  <h3>Corrections</h3>
+  <p>• Suppression de l'envoi automatique d'e-mails pour les rapports de bugs.<br>
+    • Retrait des emojis sur le site, notamment dans les boutons.</p>
+
   <h2>Mise à jour du 30 décembre 2024</h2>
   <h3>Nouveautés</h3>
   <p>• Introduction du <span class="black medium">dark mode</span>.<br>
