--- a/app/views/oeuvres/_oeuvre.html.erb
+++ b/app/views/oeuvres/_oeuvre.html.erb
@@ -195,7 +195,7 @@
         </p>
         <h1 class="title-card"><%= oeuvre.nom_oeuvre %></h1>
       </div>
-        <h2 class="title-description-reference">Notions</h2>
+        <h2 class="title-description-reference">ilsns</h2>
       <% if oeuvre.notions.any? %>
         <div class="notions-flex">
             <% oeuvre.notions.each do |notion| %>
@@ -205,7 +205,7 @@
             <% end %>
           </div>
         <% else %>
-          <p>Aucune notion associée à cette œuvre.</p>
+          <p>Aucune notion associée à cette référence.</p>
         <% end %>
       <h2 class="title-description-reference">Présentation générale</h2>
       <p class="text-description-reference"><%= linkify_designer_names_and_oeuvres(oeuvre.presentation_generale) %></p>
