--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -67,7 +67,17 @@
           <%= f.text_field :pseudo, autocomplete: "pseudo", placeholder: "Pseudo*" %>
         </div>
         <div class="field">
-          <%= f.collection_select :statut, [["Étudiant", "Étudiant"], ["Enseignant", "Enseignant"], ["Autre", "Autre"]], :first, :last, { prompt: "Choisissez un statut*" }, { class: "form-control" } %>
+          <%= f.collection_select :statut, 
+        [
+          ["Étudiant", "Étudiant"], 
+          ["Enseignant", "Enseignant"], 
+          ["Entreprise", "Entreprise"],
+          ["Association", "Association"],
+          ["Designer", "Designer"],
+          ["Artiste", "Artiste"],
+           ["Autre", "Autre"],
+        ], :first, :last, { prompt: "Choisissez un statut*" }, { class: "form-control" } %>
+
         </div>
         <div class="field">
           <%= f.collection_select :etablissement_id,
