--- a/app/assets/stylesheets/components/_loader.scss
+++ b/app/assets/stylesheets/components/_loader.scss
@@ -1,4 +1,5 @@
 @import 'abstracts/variables';
+
 #loading {
   position: fixed;
   display: flex;
@@ -7,39 +8,44 @@
   z-index: 9999;
   height: 100dvh;
   width: calc(100vw - 350px);
-  
+
 }
+
 @media screen and (min-width:769px) and (max-width: 1280px) {
   #loading {
-  width: 70vw;
+    width: 70vw;
   }
 }
+
 @media screen and (min-width:501px) and (max-width: 768px) {
   #loading {
     width: 100vw;
     height: calc(100dvh - 90px);
   }
 }
+
 @media screen and (min-width:0px) and (max-width: 500px) {
   #loading {
     width: 100vw;
     height: calc(100dvh - 80px);
   }
 }
-.loader-bg{
+
+.loader-bg {
   padding: 24px;
   background-color: $background-color;
   border-radius: 50%;
 }
 
-#loading img {
-  width: 150px;
+#loading video {
+  width: 250px;
   aspect-ratio: 1/1;
 }
 
 #content {
   display: none;
 }
+
 @media screen and (min-width: 0px) and (max-width: 1024px) {
   #loading img {
     width: 124px;
