--- a/app/assets/stylesheets/pages/_searchpage.scss
+++ b/app/assets/stylesheets/pages/_searchpage.scss
@@ -60,6 +60,23 @@
   margin-top: 148px;
 }
 
+.load-more {
+  height: 50px;
+  background-color: #f4f4f4;
+  text-align: center;
+  line-height: 50px;
+  font-size: 18px;
+  display: none;
+}
+
+.load-more:after {
+  content: "Chargement...";
+  display: inline-block;
+  padding-left: 10px;
+  font-weight: bold;
+}
+
+
 // Tabs
 .tabs {
   display: flex;
